@@ -73,6 +73,7 @@ comes with this distribution for details.
 - App::cpangitify
 - App::cpanminus
 - App::Prove::Plugin::TermTable
+- App::Prove::Plugin::TermTableStty
 - App::pwhich
 - App::RegexFileUtils
 - App::spaceless
@@ -94,7 +95,6 @@ comes with this distribution for details.
 - Dist::Zilla::Plugin::CommentOut
 - Dist::Zilla::Plugin::CSS::Compressor
 - Dist::Zilla::Plugin::FFI
-- Dist::Zilla::Plugin::FFI::CheckLib
 - Dist::Zilla::Plugin::InsertExample
 - Dist::Zilla::Plugin::JavaScript::Minifier
 - Dist::Zilla::Plugin::MathInt64
