@@ -25,9 +25,9 @@ Alien::Alien                                   = 0.02
 Alien::autoconf                                = 0.14
 Alien::automake                                = 0.14
 Alien::Autotools                               = 1.04
-Alien::Base::ModuleBuild                       = 1.04
+Alien::Base::ModuleBuild                       = 1.06
 Alien::bison                                   = 0.19
-Alien::Build                                   = 1.48
+Alien::Build                                   = 1.49
 Alien::Build::Git                              = 0.07
 Alien::Build::MB                               = 0.05
 Alien::Build::Plugin::Decode::SourceForge      = 0.01
@@ -40,7 +40,7 @@ Alien::CMake                                   = 0.11
 Alien::cmake3                                  = 0.04
 Alien::curl                                    = 0.06
 Alien::Editline                                = 0.08
-Alien::FFI                                     = 0.21
+Alien::FFI                                     = 0.22
 Alien::flex                                    = 0.12
 Alien::gmake                                   = 0.21
 Alien::GMP                                     = 1.14
@@ -58,16 +58,16 @@ Alien::MSYS                                    = 0.09
 Alien::MSYS2                                   = 0.02
 Alien::nasm                                    = 0.20
 Alien::Nettle                                  = 0.04
-Alien::nragent                                 = 0.02
+Alien::nragent                                 = 0.05
 Alien::patch                                   = 0.14
-Alien::pkgconf                                 = 0.14
+Alien::pkgconf                                 = 0.15
 Alien::Role::Alt                               = 0.04
 Alien::Role::Dino                              = 0.06
 Alien::xz                                      = 0.06
 ;Alt::Alien::cmake::System
 ;Alt::Alien::FFI::System                       = 0.21
 ;Alt::ExtUtils::PkgConfig::PLICEASE            = 1.15
-;Alt::FFI::libffi                              = 0.04
+;Alt::FFI::libffi                              = 0.05
 AnyEvent::Finger                               = 0.10
 AnyEvent::FTP                                  = 0.16
 AnyEvent::Ident                                = 0.07
@@ -76,6 +76,7 @@ AnyEvent::WebSocket::Client                    = 0.49
 App::af                                        = 0.15
 App::cpangitify                                = 0.17
 App::Prove::Plugin::TermTable                  = 0.02
+App::Prove::Plugin::TermTableStty              = 0.01
 App::pwhich                                    = 1.15
 App::RegexFileUtils                            = 0.08
 App::spaceless                                 = 0.07
@@ -86,58 +87,57 @@ Archive::Libarchive::XS                        = 0.0902
 Class::Inspector                               = 1.32
 Dist::Zilla::App::Command::aliendeps           = 0.03
 Dist::Zilla::Plugin::AlienBuild                = 0.24
-Dist::Zilla::Plugin::Alt                       = 0.05
-Dist::Zilla::Plugin::Author::Plicease          = 2.26
+Dist::Zilla::Plugin::Alt                       = 0.06
+Dist::Zilla::Plugin::Author::Plicease          = 2.29
 Dist::Zilla::Plugin::CommentOut                = 0.01
 Dist::Zilla::Plugin::CSS::Compressor           = 0.02
-Dist::Zilla::Plugin::FFI                       = 0.01
-Dist::Zilla::Plugin::FFI::CheckLib             = 1.01
+Dist::Zilla::Plugin::FFI                       = 1.02
 Dist::Zilla::Plugin::InsertExample             = 0.09
 Dist::Zilla::Plugin::JavaScript::Minifier      = 0.02
 Dist::Zilla::Plugin::MathInt64                 = 0.10
 Dist::Zilla::Plugin::OurPkgVersion             = 0.12
 Dist::Zilla::Plugin::Test::Version             = 1.09
 Dist::Zilla::Plugin::TextTabs                  = 0.04
-Dist::Zilla::PluginBundle::Author::Plicease    = 2.26
+Dist::Zilla::PluginBundle::Author::Plicease    = 2.29
 Env::ShellWords                                = 0.02
 FFI                                            = 1.12
-FFI::Build                                     = 0.07
-FFI::CheckLib                                  = 0.20
+FFI::Build                                     = 0.11
+FFI::CheckLib                                  = 0.23
 FFI::ExtractSymbols                            = 0.03
 FFI::Platypus                                  = 0.53
 FFI::Platypus::Lang::CPP                       = 0.04
 FFI::Platypus::Lang::CPP::Demangle::XS         = 0.03
-FFI::Platypus::Lang::Fortran                   = 0.08
+FFI::Platypus::Lang::Fortran                   = 0.09
 FFI::Platypus::Lang::Pascal                    = 0.05
-FFI::Platypus::Lang::Rust                      = 0.04
+FFI::Platypus::Lang::Rust                      = 0.05
 FFI::Platypus::Type::StringArray               = 0.02
 FFI::TinyCC                                    = 0.28
 FFI::TinyCC::Inline                            = 0.28
 FFI::Util                                      = 0.17
 File::LibMagic::FFI                            = 0.04
 File::Listing::Ftpcopy                         = 0.08
-File::ShareDir::Dist                           = 0.06
+File::ShareDir::Dist                           = 0.07
 File::Which                                    = 1.22
 Lingua::Alphabet::Phonetic::LAPD               = 0.02
 Log::Log4perl::Appender::TAP                   = 0.04
 Module::Build::FFI                             = 0.48
 Mojolicious::Plugin::Ident                     = 0.31
-Mojolicious::Plugin::TtRenderer                = 1.59
-NewRelic::Agent::FFI                           = 0.02
+Mojolicious::Plugin::TtRenderer                = 1.60
+NewRelic::Agent::FFI                           = 0.08
 Photography::DX                                = 0.02
 Photography::EV                                = 0.07
-PkgConfig                                      = 0.21026
-PkgConfig::LibPkgConf                          = 0.09
-Shell::Config::Generate                        = 0.31
-Shell::Guess                                   = 0.08
+PkgConfig                                      = 0.23026
+PkgConfig::LibPkgConf                          = 0.10
+Shell::Config::Generate                        = 0.33
+Shell::Guess                                   = 0.09
 String::Template                               = 0.21
-Term::Clui                                     = 1.73
+Term::Clui                                     = 1.75
 Term::EditLine                                 = 0.11
 Test::Alien::CPP                               = 0.99
 Test::CChecker                                 = 0.08
 Test::Exec                                     = 0.04
 Test::Fixme                                    = 0.16
-Test::Script                                   = 1.23
+Test::Script                                   = 1.25
 Test::Version                                  = 2.09
 Test2::Plugin::FauxHomeDir                     = 0.04
 Test2::Tools::HTTP                             = 0.08
@@ -146,7 +146,7 @@ Test2::Tools::JSON::Pointer                    = 0.01
 Test2::Tools::URL                              = 0.03
 Text::Hunspell::FFI                            = 0.02
 URI::ws                                        = 0.03
-UUID::FFI                                      = 0.06
+UUID::FFI                                      = 0.07
 WebService::LiveJournal                        = 0.08
 Win32::ErrorMode                               = 0.06
 Win32::Getppid                                 = 0.05
