@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - updated my dists to latest
+  - Remove Dist::Zilla::Plugin::FFI::CheckLib
+    (now part of Dist::Zilla::Plugin::FFI)
 
 2.07      2018-08-23 14:55:34 -0400
   - Add NewRelic::Agent::FFI
